--- a/style.css
+++ b/style.css
@@ -1,6 +1,63 @@
-body{
-    background-color:#FFFFFF;
+ body{
+    background-color;
     margin: 0; 
     padding: 0;
-    font-family: 'Georgia';
+    font-family: 'sans-serif';
+    float: center;
+}
+
+ul{
+  list-style-type: none;
+  margin: auto;
+  padding: 20px;
+  overflow: hidden; 
+  float: center;
+}
+li {
+    float: left;
+  }
+  
+li a {
+    display: table;
+    padding: 20px;
+    text-decoration: none;
+    color: rgba(0, 68, 255, 0.959);
+    font-family: 'Arial';
+    
+    
+}
+p{
+    font-family: Arial;
+    font-size: 16px;
+}
+li.logo {
+    width: 100;
+    height: auto;
+  }
+  .pic {
+width: 500px;
+height: 500px;
+margin: auto;
+padding: 10px;
+}
+  .column {
+float: left;
+width: 30.33%;
+padding: 10px;
+}
+.row::after {
+content: "";
+clear: both;
+display: table;
+}
+#foot{
+text-align: center;
+}
+.head{
+    text-align: center;
+}
+.block{
+    padding: 10px;
+    margin: auto;
+    text-align: center;
 }
