--- a/style.css
+++ b/style.css
@@ -19,6 +19,13 @@
     float: center;
 }
 
+h2::after{
+  display: block;
+  content: '';
+  margin-top: 10px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.829);
+}
+
 #logo {
   width: 50px;
   height: auto;
