--- a/style.css
+++ b/style.css
@@ -11,12 +11,12 @@
   src: url(Font/Menlo-Regular.woff);
 }
 
- body{
-    background-color: rgb(246,246,246);
-    margin: 0; 
-    padding: 0;
-    font-family: 'Helvetica';
-    float: center;
+body{
+  background-color: rgb(246,246,246);
+  margin: 0; 
+  padding: 0;
+  font-family: 'Helvetica';
+  float: center;
 }
 
 h2::after{
@@ -130,6 +130,11 @@ background-color: rgb(255, 255, 255);
   font-size: 200%;
   font-family: Arial;
 
+}
+
+#toilet{
+  width: 40%;
+  height: auto;
 }
 
 #gud{
